--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,5 +1,6 @@
-@import url("https://fonts.googleapis.com/css2?family=Rubik:wght@300;400;500;600&display=swap");
-*{
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800;900&family=Rubik:wght@300;400;500;600;700;800;900&display=swap');
+
+* {
     box-sizing: border-box;
     margin: 0px;
     padding: 0px;
@@ -11,49 +12,54 @@ body {
     font-family: "Rubik", sans-serif;
     background-color: #0e0b0b;
     color: #fff;
-  }
+}
 
-  a {
+a {
     text-decoration: none;
     color: #fff;
-  }
+}
+
+/* ol,
+ul {
+    list-style: none;
+} */
 
 /* logos style */
 
-#logos-container{
+#logos-container {
     margin: 40px 50px;
 }
 
-.logos-carousel-container-item{
+.logos-carousel-container-item {
     padding: 10px;
     border-radius: 8px;
     background-color: black;
 }
 
-.logos-carousel-container-item img{
+.logos-carousel-container-item img {
     height: 40px;
 }
 
 /* new movies style */
 
-#released-container{
+#released-container {
     height: 350px;
     margin: 50px 10px;
 }
 
-.new-movies-carousel-container-item{
+.new-movies-carousel-container-item {
     width: 300px;
     height: 370px;
     position: absolute;
     margin-top: 10px;
 }
 
-#new-movies-carousel-container{
+#new-movies-carousel-container {
     display: flex;
     justify-content: space-between;
 }
 
-.new-movie-poster-image{
+.new-movie-poster-image {
     /* width: 300px;
     height: 500px; */
     width: 100%;
@@ -61,24 +67,24 @@ body {
     border-radius: 12px;
 }
 
-.new-movies-infos{
+.new-movies-infos {
     position: relative;
     bottom: 70px;
     left: 10px;
 }
 
-.movie-rating-genre{
+.movie-rating-genre {
     display: flex;
     align-items: center;
     margin-top: 5px;
 }
 
-.movie-rating-genre span{
+.movie-rating-genre span {
     margin-left: 5px;
 }
 
 
-.movie-genre{
+.movie-genre {
     margin-left: 10px;
     display: flex;
     justify-content: space-between;
@@ -97,20 +103,20 @@ body {
 
 /* Popular movies style */
 
-.movie-section-container{
+.movie-section-container {
     margin: 50px 0px;
-  }
+}
 
-.movie-section-container h2{
+.movie-section-container h2 {
     margin-left: 50px;
-  }
+}
 
-#popular-movies-swiper{
+#popular-movies-swiper {
     height: 200px;
     margin: 10px 50px;
 }
 
-.popular-movies-carousel-container-item{
+.popular-movies-carousel-container-item {
     width: 350px;
     height: 130px;
     margin-top: 40px;
@@ -123,20 +129,20 @@ body {
 .popular-movies-carousel-container-item a {
     width: 40%;
     height: 100%;
-  }
+}
 
-.popular-movie-poster-image{
+.popular-movie-poster-image {
     width: 100%;
     height: 100%;
     border-radius: 12px;
 }
 
-.movie-classement{
+.movie-classement {
     font-size: 50px;
     font-weight: bold;
 }
 
-.popular-movies-infos{
+.popular-movies-infos {
     display: flex;
     flex-direction: column;
     row-gap: 15px;
@@ -150,19 +156,19 @@ body {
     margin-left: 20px;
 }
 
-.popular-movie-genre{
+.popular-movie-genre {
     display: flex;
     justify-content: stretch;
     font-size: 12px;
 }
 
-.popular-movie-rating{
+.popular-movie-rating {
     display: flex;
     align-items: flex-start;
     column-gap: 5px;
 }
 
-.movie-cat{
+.movie-cat {
     border: 1px solid gray;
     border-radius: 8px;
     padding: 2px 5px;
@@ -172,12 +178,12 @@ body {
 
 /* upcoming movie style */
 
-#upcoming-movies-swiper{
+#upcoming-movies-swiper {
     height: 350px;
     margin: 40px 50px;
 }
 
-.upcoming-movies-carousel-container-item{
+.upcoming-movies-carousel-container-item {
     width: 315px;
     height: 150px;
     margin-top: 10px;
@@ -186,7 +192,7 @@ body {
     align-items: center; */
 }
 
-.upcoming-movie-poster-image{
+.upcoming-movie-poster-image {
     width: 100%;
     height: 100%;
     border-radius: 12px;
@@ -197,36 +203,39 @@ body {
 
 #released-movies-swiper {
     width: 100%;
-    height: 100%;
+    height: 500px;
     padding-top: 10px;
     padding-bottom: 50px;
-  }
+}
 
-  #released-movies-swiper swiper-slide {
+#released-movies-swiper swiper-slide {
     background-position: center;
     background-size: cover;
     width: 300px;
     height: 400px;
     border-radius: 12px;
-  }
+}
 
 
-  @media (max-width: 425px) {
+@media (max-width: 425px) {
     .upcoming-movies-carousel-container-item {
-        width: 100%; /* Adjust to your layout needs */
+        width: 100%;
+        /* Adjust to your layout needs */
         max-width: 215px;
-        height: 150px; /* Adjust to your layout needs */
+        height: 150px;
+        /* Adjust to your layout needs */
         margin-top: 10px;
     }
 
     .popular-movies-carousel-container-item {
         margin: auto;
     }
+
     #released-movies-swiper {
         height: 100%;
-      }
+    }
 
-      .popular-movies-carousel-container-item {
+    .popular-movies-carousel-container-item {
         width: 220px;
         height: 130px;
         margin-top: 40px;
@@ -238,7 +247,7 @@ body {
     .popular-movies-carousel-container-item a {
         height: 200px;
         width: 95%;
-      }
+    }
 
     #popular-movies-swiper {
         height: 500px;
@@ -248,7 +257,7 @@ body {
         align-items: center;
         margin-top: 5px;
         text-align: center;
-    }  
+    }
 }
 
 @media (max-width: 768px) {
@@ -259,9 +268,664 @@ body {
         margin-top: 10px;
         margin: auto;
     }
-     .new-movie-poster-image {
+
+    .new-movie-poster-image {
         height: 360px;
     }
 
 }
 
+
+/* START CSS FOR HERO + SHOW MOVIE PAGE */
+.hero {
+    height: 648px;
+    position: relative;
+    background:
+        linear-gradient(360deg, #0D0C0F 0%, rgba(13, 12, 15, 0.85) 27.08%, rgba(13, 12, 15, 0.00) 46.88%, rgba(13, 12, 15, 0.28) 68.23%, #0D0C0F 100%),
+        url(../images/image-home.jpg) lightgray no-repeat center/cover;
+}
+
+
+header {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 39px 75px;
+}
+
+.links {
+    display: flex;
+    column-gap: 32px;
+    color: #fff;
+    font-weight: 300;
+    list-style: none;
+}
+
+.links .current-link {
+    font-weight: 800;
+}
+
+.buttons {
+    display: flex;
+    column-gap: 23px;
+}
+
+.buttons a {
+    padding: 15px;
+    font-weight: 600;
+    border-radius: 10px;
+}
+
+.buttons a.register {
+    border: 1px solid #fff;
+    color: #fff;
+
+}
+
+.buttons a.login {
+    background-color: #00925D;
+    color: #fff;
+}
+
+.infos-movie {
+    padding: 64px 75px;
+    position: absolute;
+    bottom: 0px;
+}
+
+.infos-movie .details {
+    display: flex;
+    flex-direction: column;
+    row-gap: 24px;
+    width: 506px;
+    height: max-content;
+}
+
+.infos-movie .details .genre {
+    display: flex;
+    justify-content: center;
+    padding: 4px 16px;
+    background-color: #0D0C0F;
+    width: max-content;
+    height: max-content;
+    color: white;
+    border-radius: 16px;
+}
+
+.infos-movie .details .info-card {
+    display: flex;
+    flex-direction: column;
+    row-gap: 8px;
+    width: 100%;
+    height: max-content;
+    font-family: 'Rubik', sans-serif;
+    color: #fff;
+
+}
+
+.infos-movie .details .info-card .title {
+    font-weight: 700;
+    line-height: 40px;
+    font-size: 32px;
+    width: 100%;
+    height: max-content;
+    font-family: inherit;
+}
+
+.infos-movie .details .info-card .details {
+    line-height: 22px;
+    font-size: 14px;
+    color: #9CA4AB;
+    width: 100%;
+    height: max-content;
+    font-family: inherit;
+}
+
+.infos-movie .details .info-card .desc {
+    line-height: 22px;
+    width: 100%;
+    font-family: inherit;
+}
+
+
+.infos-movie .cta {
+    display: flex;
+    column-gap: 24px;
+    width: max-content;
+    height: max-content;
+    width: 100%;
+}
+
+.infos-movie .cta .play-movie {
+    display: flex;
+    column-gap: 10px;
+    padding: 12px 24px;
+    background-color: #00925D;
+    width: max-content;
+    align-items: center;
+    border-radius: 10px;
+    height: 46px;
+}
+
+.infos-movie .cta .play-movie a {
+    color: white;
+}
+
+.infos-movie .cta .add-watchlist {
+    display: flex;
+    column-gap: 10px;
+    padding: 12px 24px;
+    width: max-content;
+    align-items: center;
+    border-radius: 10px;
+    height: 46px;
+    border: 1px solid #fff;
+}
+
+.infos-movie .cta .add-watchlist a {
+    color: #fff;
+}
+
+
+
+/* ONE MOVIE */
+
+.hero1 {
+    height: 648px;
+    position: relative;
+    background:
+        linear-gradient(360deg, #0D0C0F 0%, rgba(13, 12, 15, 0.85) 27.08%, rgba(13, 12, 15, 0.00) 46.88%, rgba(13, 12, 15, 0.28) 68.23%, #0D0C0F 100%),
+        url(../images/Image.png) lightgray no-repeat center/cover;
+}
+
+.buttons .account {
+    display: flex;
+    column-gap: 4px;
+    align-items: center;
+    width: max-content;
+    height: max-content;
+}
+
+.buttons .account .img-account {
+    border: 1px solid #fff;
+    border-radius: 50%;
+    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.30));
+
+}
+
+.infos-movie {
+    display: flex;
+    align-items: flex-end;
+    justify-content: space-between;
+    width: 100%;
+}
+
+.hero1 .infos-movie .cta {
+    justify-content: flex-end;
+}
+
+.infos-movie .cta div {
+    display: flex;
+    padding: 12px 24px;
+    column-gap: 10px;
+    border-radius: 10px;
+    align-items: center;
+    background-color: #0D0C0F;
+    border: 1px solid #28262D;
+    width: max-content;
+    height: 46px;
+}
+
+.infos-movie .cta div a {
+    color: #fff;
+}
+
+@media (max-width: 768px) {
+
+    header {
+        padding: 20px;
+    }
+
+    .logo img {
+        width: 150px;
+    }
+
+    .links,
+    .buttons .register,
+    .buttons .login {
+        display: none;
+    }
+
+    .buttons {
+        column-gap: 15px;
+    }
+
+    .infos-movie {
+        padding: 20px;
+    }
+
+    .infos-movie .details .genre {
+        padding: 3px 8px;
+        font-size: 14px;
+    }
+
+    .infos-movie .details .info-card .title {
+        font-size: 22px;
+        line-height: 30px;
+        width: max-content;
+    }
+
+    .infos-movie .details .info-card .details {
+        font-size: 12px;
+    }
+
+    .infos-movie .details .info-card .desc {
+        font-size: 14px;
+        overflow: hidden;
+        text-overflow: ellipsis;
+        display: -webkit-box;
+        -webkit-line-clamp: 2;
+        -webkit-box-orient: vertical;
+    }
+
+    .infos-movie .cta {
+        column-gap: 15px;
+        justify-content: center;
+    }
+
+    .infos-movie .cta .play-movie,
+    .infos-movie .cta .add-watchlist {
+        padding: 10px;
+    }
+
+    /*  */
+    .hero1 .cta .share,
+    .hero1 .cta .link-watchlist,
+    .hero1 .cta .link-download,
+    .hero1 .cta .link-like {
+        display: none;
+    }
+
+    .infos-movie .cta div {
+        padding: 10px;
+    }
+
+    .hero1 .infos-movie .cta {
+        justify-content: flex-start;
+        width: min-content;
+    }
+
+    .hero1 .infos-movie .cta .play-movie a {
+        font-size: 14px;
+    }
+}
+
+/*  */
+
+.movie-information {
+    display: flex;
+    height: max-content;
+    width: fit-content;
+    flex-direction: column;
+    row-gap: 24px;
+    padding: 0px 75px 40px 75px;
+    align-items: flex-start;
+    background: #0D0C0F;
+}
+
+.movie-information .top-cast,
+.movie-information .story-line {
+    display: flex;
+    flex-direction: column;
+    row-gap: 16px;
+    width: fit-content;
+    height: max-content;
+}
+
+.movie-information .story-line h4,
+.movie-information .top-cast h4 {
+    font-weight: 700;
+    font-size: 18px;
+    line-height: 26px;
+    color: #fff;
+}
+
+.movie-information .story-line p {
+    color: #9CA4AB;
+}
+
+.movie-information .stream-brand {
+    display: flex;
+    column-gap: 24px;
+    height: 42px;
+    width: max-content;
+}
+
+.movie-information .stream-brand .cast {
+    display: flex;
+    column-gap: 12px;
+}
+
+.movie-information .stream-brand .cast img {
+    width: 48px;
+    height: 48px;
+}
+
+.movie-information .stream-brand .cast .name-job {
+    display: flex;
+    flex-direction: column;
+    width: max-content;
+    height: max-content;
+}
+
+.movie-information .stream-brand .cast .name-job h4 {
+    font-weight: 600;
+    line-height: 24px;
+    color: #fff;
+}
+
+.movie-information .stream-brand .cast .name-job h6 {
+    font-weight: 500;
+    line-height: 20px;
+    font-size: 12px;
+    color: #9CA4AB;
+}
+
+/* .episodes, */
+.similar-movies {
+    background: #0D0C0F;
+    height: max-content;
+    display: flex;
+    flex-direction: column;
+    row-gap: 24px;
+    padding: 40px 0px 40px 75px;
+    font-family: 'Rubik', sans-serif;
+}
+
+/* .episodes .header, */
+.similar-movies .header {
+    height: max-content;
+
+}
+
+/* .episodes .header h4, */
+.similar-movies .header h4 {
+    font-family: inherit;
+    font-weight: 700;
+    font-size: 24px;
+    color: #fff;
+}
+
+/* .episodes .streamlist .box-episode, */
+.similar-movies .box-similar-movies {
+    display: flex;
+    column-gap: 16px;
+    width: max-content;
+}
+
+/* .episodes .streamlist .box-episode .episode {
+display: flex;
+width: 301px;
+height: 197px;
+flex-direction: column;
+justify-content: center;
+gap: 12px;
+position: relative;
+font-family: 'Rubik', sans-serif;
+}
+
+.episodes .streamlist .box-episode .episode .info {
+width: 301px;
+height: max-content;
+flex: 1 0 0;
+color: #fff;
+}
+
+.episodes .streamlist .box-episode .episode .info .title-desc {
+width: 302px;
+padding: 8px 20px;
+gap: 9px;
+position: absolute;
+bottom: 0;
+background: linear-gradient(180deg, rgba(13, 11, 11, 0.00) 0%, #000 100%);
+border-radius: 16px;
+}
+
+.episodes .streamlist .box-episode .episode .info .title-desc .title {
+display: flex;
+flex-direction: column;
+row-gap: 5px;
+}
+
+.episodes .streamlist .box-episode .episode .info .title-desc .title p {
+color: #9CA4AB;
+font-size: 12px;
+font-family: inherit;
+line-height: 20px;
+}
+
+.episodes .streamlist .box-episode .episode .info .title-desc .title h4 {
+font-weight: 700;
+line-height: 24px;
+}
+
+.episodes .streamlist .box-episode .episode .info img {
+border-radius: 16px;
+
+} */
+
+.similar-movies .box-similar-movies .similar-movie {
+    display: flex;
+    flex-direction: column;
+    row-gap: 12px;
+}
+
+.similar-movies .box-similar-movies .similar-movie .img-movie {
+    border-radius: 16px;
+    width: fit-content;
+    height: 183px;
+}
+
+.similar-movies .box-similar-movies .similar-movie .title-desc {
+    display: flex;
+    flex-direction: column;
+    row-gap: 6px;
+    color: #fff;
+    font-family: 'Rubik', sans-serif;
+}
+
+.similar-movies .box-similar-movies .similar-movie .title-desc h4 {
+    font-weight: 700;
+    line-height: 24px;
+}
+
+.similar-movies .box-similar-movies .similar-movie .title-desc .rating-genre,
+.similar-movies .box-similar-movies .similar-movie .title-desc .rating-genre .rating {
+    display: flex;
+    column-gap: 4px;
+    align-items: center;
+}
+
+
+.similar-movies .box-similar-movies .similar-movie .title-desc .rating-genre .rating h4 {
+    font-weight: 600;
+    font-size: 12px;
+}
+
+.similar-movies .box-similar-movies .similar-movie .title-desc .rating-genre .genre h4 {
+    font-family: inherit;
+    font-weight: 500;
+    font-size: 12px;
+    line-height: 20px;
+    color: #9CA4AB;
+}
+
+/*  */
+
+footer {
+    display: flex;
+    padding: 70px 0px 40px 0px;
+    flex-direction: column;
+    align-items: center;
+    row-gap: 60px;
+    border-top: 1px solid rgba(255, 255, 255, 0.10);
+    font-family: 'Rubik', sans-serif;
+    background: #0D0C0F;
+    color: #fff;
+    height: max-content;
+}
+
+footer .first-col {
+    display: flex;
+    padding: 0px 75px;
+    justify-content: space-between;
+    width: 100%;
+    height: max-content;
+    column-gap: 280px;
+}
+
+footer .first-col .desc {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
+    gap: 24px;
+    width: max-content;
+    height: max-content;
+
+}
+
+footer .first-col .desc h2 {
+    width: 444px;
+
+    font-family: inherit;
+    font-size: 30px;
+    font-weight: 500;
+    line-height: 48px;
+    height: max-content;
+}
+
+
+footer .first-col .ohter {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+    align-items: flex-end;
+    gap: 138px;
+}
+
+footer .first-col .ohter .links {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+footer .first-col .ohter .links a {
+    color: #fff;
+}
+
+footer .first-col .ohter .icons {
+    display: flex;
+    column-gap: 40px;
+    align-items: center;
+    justify-content: center;
+}
+
+footer .second-col {
+    width: 100%;
+    padding: 0px 75px;
+
+}
+
+footer .second-col .info {
+    display: flex;
+    column-gap: 70px;
+    justify-content: space-between;
+}
+
+footer .second-col .info a {
+    color: #fff;
+}
+
+
+
+/* Styles pour les petits écrans (par exemple, smartphones) */
+@media (max-width: 768px) {
+
+
+    .movie-information {
+        padding: 15px;
+        width: 100%;
+        padding-bottom: 20px;
+        overflow: hidden;
+    }
+
+    .movie-information .story-line p {
+        overflow: hidden;
+        text-overflow: ellipsis;
+        display: -webkit-box;
+        -webkit-line-clamp: 4;
+        -webkit-box-orient: vertical;
+    }
+
+
+    .similar-movies {
+        padding: 15px;
+        overflow: hidden;
+    }
+
+    footer {
+        padding: 5px 0;
+    }
+
+    footer .first-col {
+        padding: 15px;
+        column-gap: 0;
+        flex-direction: column;
+        row-gap: 15px;
+    }
+
+    footer .first-col .ohter {
+        flex-direction: column-reverse;
+        align-items: flex-start;
+        row-gap: 30px;
+        width: max-content;
+    }
+
+    footer .first-col .desc h2 {
+        font-size: 20px;
+        width: 40%;
+    }
+
+    footer .first-col .ohter .icons {
+        align-items: flex-start;
+        justify-content: flex-start;
+        column-gap: 20px;
+    }
+
+    footer .first-col .ohter .links a {
+        width: max-content;
+    }
+
+    footer .second-col {
+        padding: 15px;
+    }
+
+    footer .second-col .info {
+        width: max-content;
+        flex-direction: column;
+        row-gap: 10px;
+    }
+
+    footer .second-col .info .links {
+        display: flex;
+    }
+
+    footer .second-col .info .links .copyright {
+        text-align: center;
+    }
+
+
+}
+
+/* END CSS FOR HERO + SHOW MOVIE PAGE */
