--- a/public/css/style-w.css
+++ b/public/css/style-w.css
@@ -30,15 +30,14 @@ ul {
     margin: 40px 50px;
 }
 
-.logos-carousel-container-item {
+/* .logos-carousel-container-item {
     padding: 10px;
     border-radius: 8px;
-    background-color: black;
 }
 
 .logos-carousel-container-item img {
     height: 40px;
-}
+} */
 
 /* new movies style */
 
@@ -565,7 +564,7 @@ header {
 .movie-information {
     display: flex;
     height: max-content;
-    width: fit-content;
+    width: 100%;
     flex-direction: column;
     row-gap: 24px;
     padding: 0px 75px 40px 75px;
@@ -578,7 +577,7 @@ header {
     display: flex;
     flex-direction: column;
     row-gap: 16px;
-    width: fit-content;
+    width: 100%;
     height: max-content;
 }
 
@@ -598,7 +597,12 @@ header {
     display: flex;
     column-gap: 24px;
     height: 42px;
-    width: max-content;
+    width: 100%;
+}
+
+.movie-information .stream-brand #cast-swiper {
+
+    width: 100%;
 }
 
 .movie-information .stream-brand .cast {
@@ -607,8 +611,9 @@ header {
 }
 
 .movie-information .stream-brand .cast img {
-    width: 48px;
-    height: 48px;
+    width: 45px;
+    border-radius: 50%;
+    height: 100%;
 }
 
 .movie-information .stream-brand .cast .name-job {
@@ -622,6 +627,11 @@ header {
     font-weight: 600;
     line-height: 24px;
     color: #fff;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    display: -webkit-box;
+    -webkit-line-clamp: 1;
+    -webkit-box-orient: vertical;
 }
 
 .movie-information .stream-brand .cast .name-job h6 {
@@ -638,7 +648,7 @@ header {
     display: flex;
     flex-direction: column;
     row-gap: 24px;
-    padding: 40px 0px 40px 75px;
+    padding: 40px 75px;
     font-family: 'Rubik', sans-serif;
 }
 
@@ -660,8 +670,14 @@ header {
 .similar-movies .box-similar-movies {
     display: flex;
     column-gap: 16px;
-    width: max-content;
+    width: 100%;
 }
+
+.similar-movies .box-similar-movies #similar-movie-swiper {
+
+    width: 100%;
+}
+
 
 /* .episodes .streamlist .box-episode .episode {
 display: flex;
@@ -718,6 +734,7 @@ border-radius: 16px;
     display: flex;
     flex-direction: column;
     row-gap: 12px;
+    width: 370px !important;
 }
 
 .similar-movies .box-similar-movies .similar-movie .img-movie {
