--- a/public/css/style-w.css
+++ b/public/css/style-w.css
@@ -30,14 +30,14 @@ ul {
     margin: 40px 50px;
 }
 
-.logos-carousel-container-item {
+/* .logos-carousel-container-item {
     padding: 10px;
     border-radius: 8px;
 }
 
 .logos-carousel-container-item img {
     height: 40px;
-}
+} */
 
 /* new movies style */
 
